--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eeui-cli",
-    "version": "2.5.2",
+    "version": "2.5.3",
     "description": "A simple CLI for scaffolding eeui projects, we provide eeui-template to quickly build small and medium sized app.",
     "bin": {
         "eeui": "./cli.js"
@@ -37,6 +37,7 @@
         "child_process": "^1.0.2",
         "chokidar": "^3.3.1",
         "compressing": "^1.5.0",
+        "css-loader": "^3.6.0",
         "decompress": "^4.2.0",
         "fs-extra": "^8.1.0",
         "gauge": "^3.0.0",
@@ -64,14 +65,14 @@
         "vue-loader": "^15.9.0",
         "vue-style-loader": "^4.1.2",
         "vue-template-compiler": "^2.6.11",
-        "webpack": "^4.46.0",
-        "webpack-cli": "^3.3.11",
+        "webpack": "^4.47.0",
+        "webpack-cli": "^3.3.12",
         "webpack-merge": "^4.2.2",
         "weex-bindingx": "^0.0.49",
         "weex-loader": "^0.7.12",
         "weex-styler": "^0.3.1",
-        "weex-ui": "^0.8.4",
-        "ws": "^7.2.1",
+        "weex-ui": "^0.8.6",
+        "ws": "^7.5.9",
         "yargs": "^8.0.2"
     }
 }
